objects/ASI_CRM_EDI_Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buyer_Company_Name__c</fullName>
        <label>Buyer Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buyer_GLN__c</fullName>
        <label>Buyer GLN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Control_Total_Line_Items__c</fullName>
        <label>Control Total Of Line Items</label>
        <summaryForeignKey>ASI_CRM_EDI_Invoice_Item__c.ASI_CRM_EDI_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cust_PO__c</fullName>
        <label>Cust. PO#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EDI_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDI Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Generation_Error__c</fullName>
        <label>Invoice Generation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monetary_Amount__c</fullName>
        <label>Monetary Amount</label>
        <summarizedField>ASI_CRM_EDI_Invoice_Item__c.ASI_CRM_Goods_Item_Total__c</summarizedField>
        <summaryForeignKey>ASI_CRM_EDI_Invoice_Item__c.ASI_CRM_EDI_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ready_For_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready For Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sender_Identification__c</fullName>
        <label>Sender Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EDI Invoice Header</label>
    <listViews>
        <fullName>ASI_CRM_HK_Completed_EDI_Invoice</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Ready_For_Interface__c</columns>
        <columns>ASI_CRM_EDI_Completed__c</columns>
        <columns>ASI_CRM_Invoice_Generation_Error__c</columns>
        <columns>ASI_CRM_Buyer_Company_Name__c</columns>
        <columns>ASI_CRM_Buyer_GLN__c</columns>
        <columns>ASI_CRM_Control_Total_Line_Items__c</columns>
        <columns>ASI_CRM_Cust_PO__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Monetary_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Ready_For_Interface__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Completed EDI Invoice</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Pending_EDI_Invoice</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Ready_For_Interface__c</columns>
        <columns>ASI_CRM_EDI_Completed__c</columns>
        <columns>ASI_CRM_Invoice_Generation_Error__c</columns>
        <columns>ASI_CRM_Buyer_Company_Name__c</columns>
        <columns>ASI_CRM_Buyer_GLN__c</columns>
        <columns>ASI_CRM_Control_Total_Line_Items__c</columns>
        <columns>ASI_CRM_Cust_PO__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Monetary_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Ready_For_Interface__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending EDI Invoice</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Ready_For_Interface__c</columns>
        <columns>ASI_CRM_EDI_Completed__c</columns>
        <columns>ASI_CRM_Invoice_Generation_Error__c</columns>
        <columns>ASI_CRM_Buyer_Company_Name__c</columns>
        <columns>ASI_CRM_Buyer_GLN__c</columns>
        <columns>ASI_CRM_Control_Total_Line_Items__c</columns>
        <columns>ASI_CRM_Cust_PO__c</columns>
        <columns>ASI_CRM_Delivery_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Monetary_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EDIINV-{0000000}</displayFormat>
        <label>EDI Invoice Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDI Invoice Headers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_EDI_Invoice_Header</fullName>
        <active>true</active>
        <label>ASI CRM HK EDI Invoice Header</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>